<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="14dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="granados.mynotepad.RegisterNotesActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/title_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/type"/>

    <Spinner
        android:id="@+id/spinner_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="6dp"
        android:entries="@array/array_spinner_notes" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        tools:ignore="LabelFor" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundcolor"
        android:onClick="callRegisterNotes"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</LinearLayout>
